# STM32F407DISC_WSL

./: .gitignore  README.md  SetupLog1.md  SetupLog2.md  SetupLog3.md  SetupLog6.md
embedded/: Cargo.toml  SetupLog.txt  SetupLog1.txt
embedded/.cargo/: config.toml
embedded/src/: main.rs
ir_sensor/: Cargo.toml
ir_sensor/.cargo/: config.toml
ir_sensor/src/: ir_sensor.rs  main.rs
test-size/: Cargo.toml  SetupLog.txt  SetupLog2.txt  SetupLog3.txt  memory.x
test-size/.cargo/: config.toml
test-size/src/: dummy.rs  lib.rs  main.rs
