[package]
authors = ["Lam Tran <lamteteeow@gmail.com>"]
name = "embedded"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m-rt = "0.6.15"
cortex-m-semihosting = "0.5.0"
panic-halt = "0.2.0"
stm32f407g-disc = "0.4.1"

