[package]
name = "test-size"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
accelerometer = "0.11.0"
cortex-m = "0.7.2"
cortex-m-rt = "0.6.13"
lis302dl = "0.1.0"
stm32f407g-disc = "0.4.1"
stm32f4xx-hal = "0.9.0"
